tests/spec/parse/snapshots/impl_multiple_type_params.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Pair<K, V> {
    key: K,
    value: V,
  }
  
  impl<K, V> Pair<K, V> {
    fn get_key(self: Pair<K, V>) -> K {
      return self.key;
    }
  
    fn get_value(self: Pair<K, V>) -> V {
      return self.value;
    }
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Pair",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 4,
        },
        generics: [
            Generic {
                name: "K",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 13,
                    byte_length: 1,
                },
            },
            Generic {
                name: "V",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 16,
                    byte_length: 1,
                },
            },
        ],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "key",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 23,
                        byte_length: 3,
                    },
                    annotation: Constructor {
                        name: "K",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 28,
                            byte_length: 1,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
                StructFieldDefinition {
                    doc: None,
                    name: "value",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 33,
                        byte_length: 5,
                    },
                    annotation: Constructor {
                        name: "V",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 40,
                            byte_length: 1,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 43,
        },
    },
    ImplBlock {
        annotation: Constructor {
            name: "Pair",
            params: [
                Constructor {
                    name: "K",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 62,
                        byte_length: 1,
                    },
                },
                Constructor {
                    name: "V",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 65,
                        byte_length: 1,
                    },
                },
            ],
            span: Span {
                file_id: 0,
                byte_offset: 57,
                byte_length: 10,
            },
        },
        receiver_name: "Pair",
        methods: [
            Function {
                doc: None,
                attributes: [],
                name: "get_key",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 75,
                    byte_length: 7,
                },
                generics: [],
                params: [
                    Binding {
                        pattern: Identifier {
                            identifier: "self",
                            span: Span {
                                file_id: 0,
                                byte_offset: 83,
                                byte_length: 4,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "Pair",
                                params: [
                                    Constructor {
                                        name: "K",
                                        params: [],
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 94,
                                            byte_length: 1,
                                        },
                                    },
                                    Constructor {
                                        name: "V",
                                        params: [],
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 97,
                                            byte_length: 1,
                                        },
                                    },
                                ],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 89,
                                    byte_length: 10,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                ],
                return_annotation: Constructor {
                    name: "K",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 104,
                        byte_length: 1,
                    },
                },
                return_type: Var {
                    id: uninferred,
                },
                visibility: Private,
                body: Definition(
                    Block {
                        items: [
                            Return {
                                expression: DotAccess {
                                    expression: Identifier {
                                        value: "self",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 119,
                                            byte_length: 4,
                                        },
                                        resolution: Unresolved,
                                    },
                                    member: "key",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 119,
                                        byte_length: 8,
                                    },
                                    resolution: Unresolved,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 112,
                                    byte_length: 15,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 106,
                            byte_length: 26,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 72,
                    byte_length: 60,
                },
            },
            Function {
                doc: None,
                attributes: [],
                name: "get_value",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 139,
                    byte_length: 9,
                },
                generics: [],
                params: [
                    Binding {
                        pattern: Identifier {
                            identifier: "self",
                            span: Span {
                                file_id: 0,
                                byte_offset: 149,
                                byte_length: 4,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "Pair",
                                params: [
                                    Constructor {
                                        name: "K",
                                        params: [],
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 160,
                                            byte_length: 1,
                                        },
                                    },
                                    Constructor {
                                        name: "V",
                                        params: [],
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 163,
                                            byte_length: 1,
                                        },
                                    },
                                ],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 155,
                                    byte_length: 10,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                ],
                return_annotation: Constructor {
                    name: "V",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 170,
                        byte_length: 1,
                    },
                },
                return_type: Var {
                    id: uninferred,
                },
                visibility: Private,
                body: Definition(
                    Block {
                        items: [
                            Return {
                                expression: DotAccess {
                                    expression: Identifier {
                                        value: "self",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 185,
                                            byte_length: 4,
                                        },
                                        resolution: Unresolved,
                                    },
                                    member: "value",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 185,
                                        byte_length: 10,
                                    },
                                    resolution: Unresolved,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 178,
                                    byte_length: 17,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 172,
                            byte_length: 28,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 136,
                    byte_length: 64,
                },
            },
        ],
        generics: [
            Generic {
                name: "K",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 51,
                    byte_length: 1,
                },
            },
            Generic {
                name: "V",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 54,
                    byte_length: 1,
                },
            },
        ],
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 46,
            byte_length: 156,
        },
    },
]
