tests/spec/parse/snapshots/impl_no_semicolons_after_methods.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Point {
    x: int,
    y: int,
  }
  
  impl Point {
    fn new(x: int, y: int) -> Point {
      return Point { x, y };
    }
    fn get_x(self: Point) -> int {
      return self.x;
    }
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Point",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 5,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "x",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 18,
                        byte_length: 1,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 21,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
                StructFieldDefinition {
                    doc: None,
                    name: "y",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 28,
                        byte_length: 1,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 31,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 36,
        },
    },
    ImplBlock {
        annotation: Constructor {
            name: "Point",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 44,
                byte_length: 5,
            },
        },
        receiver_name: "Point",
        methods: [
            Function {
                doc: None,
                attributes: [],
                name: "new",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 57,
                    byte_length: 3,
                },
                generics: [],
                params: [
                    Binding {
                        pattern: Identifier {
                            identifier: "x",
                            span: Span {
                                file_id: 0,
                                byte_offset: 61,
                                byte_length: 1,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 64,
                                    byte_length: 3,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                    Binding {
                        pattern: Identifier {
                            identifier: "y",
                            span: Span {
                                file_id: 0,
                                byte_offset: 69,
                                byte_length: 1,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 72,
                                    byte_length: 3,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                ],
                return_annotation: Constructor {
                    name: "Point",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 80,
                        byte_length: 5,
                    },
                },
                return_type: Var {
                    id: uninferred,
                },
                visibility: Private,
                body: Definition(
                    Block {
                        items: [
                            Return {
                                expression: StructCall {
                                    name: "Point",
                                    field_assignments: [
                                        StructFieldAssignment {
                                            name: "x",
                                            name_span: Span {
                                                file_id: 0,
                                                byte_offset: 107,
                                                byte_length: 1,
                                            },
                                            value: Identifier {
                                                value: "x",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 107,
                                                    byte_length: 1,
                                                },
                                                resolution: Unresolved,
                                            },
                                        },
                                        StructFieldAssignment {
                                            name: "y",
                                            name_span: Span {
                                                file_id: 0,
                                                byte_offset: 110,
                                                byte_length: 1,
                                            },
                                            value: Identifier {
                                                value: "y",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 110,
                                                    byte_length: 1,
                                                },
                                                resolution: Unresolved,
                                            },
                                        },
                                    ],
                                    spread: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 99,
                                        byte_length: 14,
                                    },
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 92,
                                    byte_length: 21,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 86,
                            byte_length: 32,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 54,
                    byte_length: 64,
                },
            },
            Function {
                doc: None,
                attributes: [],
                name: "get_x",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 124,
                    byte_length: 5,
                },
                generics: [],
                params: [
                    Binding {
                        pattern: Identifier {
                            identifier: "self",
                            span: Span {
                                file_id: 0,
                                byte_offset: 130,
                                byte_length: 4,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "Point",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 136,
                                    byte_length: 5,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                ],
                return_annotation: Constructor {
                    name: "int",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 146,
                        byte_length: 3,
                    },
                },
                return_type: Var {
                    id: uninferred,
                },
                visibility: Private,
                body: Definition(
                    Block {
                        items: [
                            Return {
                                expression: DotAccess {
                                    expression: Identifier {
                                        value: "self",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 163,
                                            byte_length: 4,
                                        },
                                        resolution: Unresolved,
                                    },
                                    member: "x",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 163,
                                        byte_length: 6,
                                    },
                                    resolution: Unresolved,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 156,
                                    byte_length: 13,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 150,
                            byte_length: 24,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 121,
                    byte_length: 53,
                },
            },
        ],
        generics: [],
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 39,
            byte_length: 137,
        },
    },
]
